# monitorfiles

./: CMakeLists.txt
files/: config.json
monitorfiles/: CMakeLists.txt  monitorfiles.cpp
monitorfiles/include/: consts.h  filesystem_utils.h  monitorfiles.h
monitorfiles/include/parser/: parser.h  parser_fabric.h  parser_json.h
monitorfiles/source/: filesystem_utils.cpp
monitorfiles/source/app/: app_backup_files.cpp  app_initialize.cpp  app_restore_file.cpp  app_run.cpp
monitorfiles/source/parser/: parser_json.cpp
